# AVTrack

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
configs/: config.yaml
configs/agent/: base.yaml  face.yaml  fix_window.yaml  no_compression.yaml  no_separation.yaml
configs/data/: avtrack.yaml
configs/eval/: default.yaml
configs/model/asr/: whisper_large.yaml  whisper_small.yaml
configs/model/separator/: mossformer2.yaml
configs/model/speaker/: ecapa.yaml
configs/model/tracker/: sam3.yaml
configs/model/vlm/: qwen3vl_4b.yaml  qwen3vl_8b.yaml  qwen3vl_plus.yaml
scripts/: run_eval.py  run_inference.py  run_inference_one_video_example.py
src/agent/: __init__.py  base_agent.py  face_agent.py  sep_agent.py
src/data/: __init__.py  dataset.py  utils.py
src/evaluation/: __init__.py  eval_runner.py  metrics.py
src/prompts/: __init__.py  global_window.py  local_window.py
src/skills/: __init__.py  asr.py  face.py  segmentor.py  separator.py  speaker.py  tracker.py  vlm.py
src/utils/: __init__.py  io.py  matching.py  seed.py  text.py  visualization.py
