[project]
name = "avtrack"
version = "0.1.0"
description = "AVTrack: Audio-Visual Person Tracking (ICML 2026)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Yaoting Wang", email = "yaoting.wang@miromind.ai" },
]
keywords = [
    "audio-visual",
    "person-tracking",
    "multimodal",
    "video-understanding",
    "vision-language-model",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchvision",
    "torchaudio",
    "torchcodec",
    "soundfile",
    "transformers",
    "accelerate",
    "Pillow",
    "numpy",
    "opencv-python",
    "hydra-core>=1.3",
    "omegaconf",
    "tqdm",
    "speechbrain",
    "python-dotenv",
    "trackeval",
]

[project.optional-dependencies]
face = ["deepface", "scikit-learn"]
sep = [
    "modelscope",
    "addict",
    "simplejson",
    "oss2",
    "sortedcontainers",
    "datasets",
    "einops",
    "rotary-embedding-torch",
]
dev = ["pytest", "mypy", "ruff"]

[project.urls]
Homepage = "https://github.com/yaotingwangofficial/AVTrack"
Repository = "https://github.com/yaotingwangofficial/AVTrack"
Issues = "https://github.com/yaotingwangofficial/AVTrack/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# uv configuration
#
# Install everything with:
#   uv sync                                # core dependencies
#   uv sync --extra face --extra sep --extra dev   # all optional groups
#
# CUDA wheels for torch/torchvision/torchaudio are pulled from the PyTorch
# index. Override the CUDA version with:
#   uv sync --extra-index-url https://download.pytorch.org/whl/cu121
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
